--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@codesandbox/sandpack-themes": "^2.0.21",
     "@mantine/core": "^7.10.0",
     "@mantine/hooks": "^7.10.0",
+    "@mantinex/mantine-logo": "^1.0.1",
     "@monaco-editor/react": "^4.6.0",
+    "@tabler/icons-react": "^3.5.0",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
