--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mantinex/mantine-logo": "^1.0.1",
     "@monaco-editor/react": "^4.6.0",
     "@tabler/icons-react": "^3.5.0",
+    "all": "^0.0.0",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
