--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "@mantinex/mantine-logo": "^1.0.1",
     "@monaco-editor/react": "^4.6.0",
     "@tabler/icons-react": "^3.5.0",
+    "@tailwindcss/typography": "^0.5.13",
     "all": "^0.0.0",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-markdown": "^9.0.1",
     "react-resizable": "^3.0.5",
     "react-resizeable": "^0.2.6",
     "react-split-pane": "^0.1.92"
