--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@tabler/icons-react": "^3.5.0",
     "@tailwindcss/typography": "^0.5.13",
     "all": "^0.0.0",
+    "autoprefixer": "^10.4.19",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
